<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/tifogi_reset"
            android:textSize="22sp"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/timer"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

            <EditText
                android:hint="@string/email"
                android:id="@+id/et_email"
                android:drawableEnd="@drawable/ic_email_black_24dp"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="" />


            <EditText
                android:hint="@string/code"
                android:id="@+id/et_code"
                android:drawableEnd="@drawable/ic_key_black_24dp"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="" />


            <EditText
                android:hint="@string/password"
                android:id="@+id/et_password"
                android:drawableEnd="@drawable/ic_key_black_24dp"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="" />


        <Button
            android:id="@+id/btn_reset"
            android:text="@string/request_new_code"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ProgressBar
            android:id="@+id/progress"
            android:visibility="invisible"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
</LinearLayout>